crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@36.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO e_star (class, a, e)\n   VALUES ('e', 17, '-2'::int2);"
---
InsertStmt@0..65
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "e_star"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ResTarget@20..25
    Class@20..25 "class"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..28
    Ident@27..28 "a"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ResTarget@30..31
    Ident@30..31 "e"
  Ascii41@31..32 ")"
  Newline@32..33 "\n"
  Whitespace@33..36 "   "
  SelectStmt@36..63
    Values@36..42 "VALUES"
    Whitespace@42..43 " "
    Ascii40@43..44 "("
    List@44..63
      AConst@44..47
        Sconst@44..47 "'e'"
      Ascii44@47..48 ","
      Whitespace@48..49 " "
      AConst@49..51
        Iconst@49..51 "17"
      Ascii44@51..52 ","
      Whitespace@52..53 " "
      TypeCast@53..63
        AConst@53..57
          Sconst@53..57 "'-2'"
        Typecast@57..59 "::"
        TypeName@59..63
          Ident@59..63 "int2"
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

