crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@4.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE d_star (\n\td \t\t\tfloat8\n) INHERITS (b_star, c_star);"
---
CreateStmt@0..63
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..19
    Ident@13..19 "d_star"
  Whitespace@19..20 " "
  Ascii40@20..21 "("
  Newline@21..22 "\n"
  Newline@22..23 "\t"
  ColumnDef@23..34
    Ident@23..24 "d"
    Whitespace@24..25 " "
    Newline@25..28 "\t\t\t"
    TypeName@28..34
      Ident@28..34 "float8"
  Newline@34..35 "\n"
  Ascii41@35..36 ")"
  Whitespace@36..37 " "
  Inherits@37..45 "INHERITS"
  Whitespace@45..46 " "
  Ascii40@46..47 "("
  RangeVar@47..53
    Ident@47..53 "b_star"
  Ascii44@53..54 ","
  Whitespace@54..55 " "
  RangeVar@55..61
    Ident@55..61 "c_star"
  Ascii41@61..62 ")"
  Ascii59@62..63 ";"

