crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@41.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO f_star (class, a, c, e, f)\n   VALUES ('f', 19, 'hi claire'::name, '-5'::int2, '(1,3),(2,4)'::polygon);"
---
InsertStmt@0..114
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "f_star"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ResTarget@20..25
    Class@20..25 "class"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..28
    Ident@27..28 "a"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ResTarget@30..31
    Ident@30..31 "c"
  Ascii44@31..32 ","
  Whitespace@32..33 " "
  ResTarget@33..34
    Ident@33..34 "e"
  Ascii44@34..35 ","
  Whitespace@35..36 " "
  ResTarget@36..37
    Ident@36..37 "f"
  Ascii41@37..38 ")"
  Newline@38..39 "\n"
  Whitespace@39..42 "   "
  SelectStmt@42..112
    Values@42..48 "VALUES"
    Whitespace@48..49 " "
    Ascii40@49..50 "("
    List@50..112
      AConst@50..53
        Sconst@50..53 "'f'"
      Ascii44@53..54 ","
      Whitespace@54..55 " "
      AConst@55..57
        Iconst@55..57 "19"
      Ascii44@57..58 ","
      Whitespace@58..59 " "
      TypeCast@59..76
        AConst@59..70
          Sconst@59..70 "'hi claire'"
        Typecast@70..72 "::"
        TypeName@72..76
          NameP@72..76 "name"
      Ascii44@76..77 ","
      Whitespace@77..78 " "
      TypeCast@78..88
        AConst@78..82
          Sconst@78..82 "'-5'"
        Typecast@82..84 "::"
        TypeName@84..88
          Ident@84..88 "int2"
      Ascii44@88..89 ","
      Whitespace@89..90 " "
      TypeCast@90..112
        AConst@90..103
          Sconst@90..103 "'(1,3),(2,4)'"
        Typecast@103..105 "::"
        TypeName@105..112
          Ident@105..112 "polygon"
  Ascii41@112..113 ")"
  Ascii59@113..114 ";"

