crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@42.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO f_star (class, a, c, e)\n   VALUES ('f', 20, 'hi mike'::name, '-6'::int2);"
---
InsertStmt@0..85
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "f_star"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ResTarget@20..25
    Class@20..25 "class"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..28
    Ident@27..28 "a"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ResTarget@30..31
    Ident@30..31 "c"
  Ascii44@31..32 ","
  Whitespace@32..33 " "
  ResTarget@33..34
    Ident@33..34 "e"
  Ascii41@34..35 ")"
  Newline@35..36 "\n"
  Whitespace@36..39 "   "
  SelectStmt@39..83
    Values@39..45 "VALUES"
    Whitespace@45..46 " "
    Ascii40@46..47 "("
    List@47..83
      AConst@47..50
        Sconst@47..50 "'f'"
      Ascii44@50..51 ","
      Whitespace@51..52 " "
      AConst@52..54
        Iconst@52..54 "20"
      Ascii44@54..55 ","
      Whitespace@55..56 " "
      TypeCast@56..71
        AConst@56..65
          Sconst@56..65 "'hi mike'"
        Typecast@65..67 "::"
        TypeName@67..71
          NameP@67..71 "name"
      Ascii44@71..72 ","
      Whitespace@72..73 " "
      TypeCast@73..83
        AConst@73..77
          Sconst@73..77 "'-6'"
        Typecast@77..79 "::"
        TypeName@79..83
          Ident@79..83 "int2"
  Ascii41@83..84 ")"
  Ascii59@84..85 ";"

