crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@43.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO f_star (class, a, c, f)\n   VALUES ('f', 21, 'hi marcel'::name, '(11,44),(22,55),(33,66)'::polygon);"
---
InsertStmt@0..111
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "f_star"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ResTarget@20..25
    Class@20..25 "class"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..28
    Ident@27..28 "a"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ResTarget@30..31
    Ident@30..31 "c"
  Ascii44@31..32 ","
  Whitespace@32..33 " "
  ResTarget@33..34
    Ident@33..34 "f"
  Ascii41@34..35 ")"
  Newline@35..36 "\n"
  Whitespace@36..39 "   "
  SelectStmt@39..109
    Values@39..45 "VALUES"
    Whitespace@45..46 " "
    Ascii40@46..47 "("
    List@47..109
      AConst@47..50
        Sconst@47..50 "'f'"
      Ascii44@50..51 ","
      Whitespace@51..52 " "
      AConst@52..54
        Iconst@52..54 "21"
      Ascii44@54..55 ","
      Whitespace@55..56 " "
      TypeCast@56..73
        AConst@56..67
          Sconst@56..67 "'hi marcel'"
        Typecast@67..69 "::"
        TypeName@69..73
          NameP@69..73 "name"
      Ascii44@73..74 ","
      Whitespace@74..75 " "
      TypeCast@75..109
        AConst@75..100
          Sconst@75..100 "'(11,44),(22,55),(33, ..."
        Typecast@100..102 "::"
        TypeName@102..109
          Ident@102..109 "polygon"
  Ascii41@109..110 ")"
  Ascii59@110..111 ";"

