crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@45.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO f_star (class, c, e, f)\n   VALUES ('f', 'hi keith'::name, '-8'::int2,\n\t   '(1111,3333),(2222,4444)'::polygon);"
---
InsertStmt@0..122
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "f_star"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ResTarget@20..25
    Class@20..25 "class"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..28
    Ident@27..28 "c"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ResTarget@30..31
    Ident@30..31 "e"
  Ascii44@31..32 ","
  Whitespace@32..33 " "
  ResTarget@33..34
    Ident@33..34 "f"
  Ascii41@34..35 ")"
  Newline@35..36 "\n"
  Whitespace@36..39 "   "
  SelectStmt@39..120
    Values@39..45 "VALUES"
    Whitespace@45..46 " "
    Ascii40@46..47 "("
    List@47..120
      AConst@47..50
        Sconst@47..50 "'f'"
      Ascii44@50..51 ","
      Whitespace@51..52 " "
      TypeCast@52..68
        AConst@52..62
          Sconst@52..62 "'hi keith'"
        Typecast@62..64 "::"
        TypeName@64..68
          NameP@64..68 "name"
      Ascii44@68..69 ","
      Whitespace@69..70 " "
      TypeCast@70..80
        AConst@70..74
          Sconst@70..74 "'-8'"
        Typecast@74..76 "::"
        TypeName@76..80
          Ident@76..80 "int2"
      Ascii44@80..81 ","
      Newline@81..82 "\n"
      Newline@82..83 "\t"
      Whitespace@83..86 "   "
      TypeCast@86..120
        AConst@86..111
          Sconst@86..111 "'(1111,3333),(2222,44 ..."
        Typecast@111..113 "::"
        TypeName@113..120
          Ident@113..120 "polygon"
  Ascii41@120..121 ")"
  Ascii59@121..122 ";"

